# TILDA_defect_classification

./: 2-kernel_sizes_model.md  README.md  README_2KERNEL_SIZE_MODEL.md
TILDA-defect-classific/: README.md  pyproject.toml
TILDA-defect-classific/CNN_Filters/: Readme_CNN_filters.md
TILDA-defect-classific/functions/: models.py  plotting.py  preprocessing.py  shap_plot.py
TILDA-defect-classific/images/introduction/2-kernelsizes/: In previous work.docx
TILDA-defect-classific/notebook_CNN/: Defects_only-3x3_long.ipynb
TILDA-defect-classific/notebook_CNN/2-class/: Defect_detection-3x3_8-16-32.ipynb
TILDA-defect-classific/notebook_CNN/4-class/: Defects_identification-3x3-7x7_combo-redux.ipynb  Defects_identification-7x7_16-32-64.ipynb
TILDA-defect-classific/notebook_CNN/shap/: shap_4class_new-3-4_7-16.ipynb
