[tool.poetry]
name = "tilda-defect-classific"
version = "0.1.0"
description = ""
authors = ["will_tong2001@yahoo.com <will_tong2001@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
jupyter = "^1.0.0"
keras = "^3.4.1"
scikit-learn = "^1.5.1"
opencv-contrib-python = "^4.10.0.84"
albumentations = "^1.4.12"
ultralytics = "^8.2.70"
seaborn = "^0.13.2"
shap = "^0.46.0"
keras-vis = {git = "https://github.com/raghakot/keras-vis.git"}
tensorflow = "2.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
